--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -16,8 +16,8 @@
   max-width: 100% !important;
   width: 100% !important;
   margin: 0 !important;
-  padding-left: 0 !important;
-  padding-right: 0 !important;
+  padding-left: 2rem !important;
+  padding-right: 2rem !important;
 }
 
 /* (optional) keep readability: left-aligned with a comfortable line length */
